src/syntax_analysis/expression/function_expression/tests/snapshots/monkey_interpreter__syntax_analysis__expression__function_expression__tests__test_syntax_analysis_for_function_expression_case2.snap
---
source: src/syntax_analysis/expression/function_expression/tests/mod.rs
expression: "crate::syntax_analysis::SyntaxAnalysis::from(crate::lexical_analysis::LexicalAnalysis::from(code).unwrap())"

---
Ok(
    [
        Expression {
            expression: Function {
                parameters: [],
                block: Block {
                    nodes: [],
                },
            },
        },
    ],
)
