src/syntax_analysis/expression/function_expression/tests/snapshots/monkey_interpreter__syntax_analysis__expression__function_expression__tests__test_syntax_analysis_for_function_expression_case3.snap
---
source: src/syntax_analysis/expression/function_expression/tests/mod.rs
expression: "crate::syntax_analysis::get_abstract_syntax_tree(crate::lexical_analysis::get_tokens(code))"
---
AbstractSyntaxTree {
    abstract_syntax_tree: [
        Expression {
            expression: Function {
                parameters: [
                    Identifier {
                        identifier_token: Identifier {
                            literal: "x",
                        },
                    },
                ],
                block: Block {
                    nodes: [],
                },
            },
        },
    ],
    syntax_parsing_errors: [],
}
